# game-saver

./: Cargo.toml  README.md  example_game_saver.toml
.github/: dependabot.yml
.github/workflows/: lint.yml
src/: cli.rs  config.rs  main.rs  tui.rs  watcher.rs
src/app/: draw.rs  events.rs  mod.rs  saves.rs  state.rs  update.rs
src/app/helper/: files.rs  list.rs  mod.rs  terminal.rs
src/app/ui/: draw.rs  events.rs  mod.rs  state.rs
src/app/update/: mod.rs
src/ui/: draw.rs  mod.rs
src/ui/helper/: list.rs  mod.rs  terminal.rs
