[package]
name = "game-saver"
description = "A tool to backup and restore game files."
version = "0.1.0"
authors = ["Arne Beer <contact@arne.beer>"]
homepage = "https://github.com/nukesor/game-saver"
repository = "https://github.com/nukesor/game-saver"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
watchexec = "1"
dirs = "4"
crossbeam-channel = "0.5"
shellexpand = "2"

better-panic = "0.3"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
chrono-english = "0.1"

clap = { version = "3", features = ["derive", "cargo"] }
shell-escape = "0.1"
tui = { version = "0.18", features = ["crossterm"] }
crossterm = "0.23"
log = "0.4"
pretty_env_logger = "0.4"

serde = "1"
toml = "0.8"
serde_derive = "1"

[dev-dependencies]
pretty_assertions = "1"
