[package]
name = "game-saver"
description = "A tool to backup and restore game files."
version = "0.1.0"
authors = ["Arne Beer <contact@arne.beer>"]
homepage = "https://github.com/nukesor/game-saver"
repository = "https://github.com/nukesor/game-saver"
license = "MIT"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
better-panic = "0.3"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "cargo"] }
ctrlc = { version = "3", features = ["termination"] }
crossbeam-channel = "0.5"
crossterm = "0.28"
dirs = "6"
flexi_logger = "0.29"
log = "0.4"
serde = "1"
serde_derive = "1"
shellexpand = "3"
tokio = { version = "1", features = ["rt-multi-thread"] }
toml = "0.8"
ratatui = { version = "0.29", features = ["crossterm"] }
watchexec = "5"
watchexec-filterer-globset = "6"
watchexec-events = "4.0"

[dev-dependencies]
pretty_assertions = "1"
