[package]
name = "game-saver"
description = "A tool to backup and restore game files."
version = "0.1.0"
authors = ["Arne Beer <contact@arne.beer>"]
homepage = "https://github.com/nukesor/game-saver"
repository = "https://github.com/nukesor/game-saver"
license = "MIT"
edition = "2024"

[dependencies]
anyhow = "1"
better-panic = "0.3"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "cargo"] }
ctrlc = { version = "3", features = ["termination"] }
crossbeam-channel = "0.5"
crossterm = "0.29"
dirs = "6"
flexi_logger = "0.31"
log = "0.4"
serde = { version = "1", features = ["derive"] }
shellexpand = "3"
tokio = { version = "1", features = ["rt-multi-thread"] }
toml = "0.9"
ratatui = { version = "0.29", features = ["crossterm"] }
watchexec = "8"
watchexec-filterer-globset = "8"
watchexec-events = "6.0"

[dev-dependencies]
pretty_assertions = "1"
